--- a/index.html
+++ b/index.html
@@ -4,25 +4,32 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
   <title>Wireframe</title>
 </head>
 <body>
-  <header></header>
+  <header><p>header</p></header>
 
-  <nav></nav>
+  <nav><p>nav</p></nav>
 
   <aside>
-    <h3></h3>
+    <p>aside</p>
   </aside>
 
   <section>
+    <p>section</p>
     <article>
-      <h3></h3>
-      <h3></h3>
+      <p>article</p>
+      <h1></h1>
+      <h2></h2>
       <h3></h3>
       <p></p>
     </article>
   </section>
+
+  <footer>
+    <p>footer</p>
+  </footer>
   
 
   
