added a main element and styled the header and nav

--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
   <title>Wireframe</title>
 </head>
 <body>
-  <header><p>header</p></header>
+  <main>
+      <header><p>header</p></header>
 
-  <nav><p>nav</p></nav>
-
-  <aside>
-    <p>aside</p>
-  </aside>
-
-  <section>
-    <p>section</p>
-    <article>
-      <p>article</p>
-      <h1></h1>
-      <h2></h2>
-      <h3></h3>
-      <p></p>
-    </article>
-  </section>
+      <nav><p>nav</p></nav>
+    
+      <aside>
+        <p>aside</p>
+      </aside>
+    
+      <section>
+        <p>section</p>
+        <article>
+          <p>article</p>
+          <h1></h1>
+          <h2></h2>
+          <h3></h3>
+          <p></p>
+        </article>
+      </section>
+  </main>
 
   <footer>
     <p>footer</p>
